# Glycemic-Patterns

./: .gitignore  AUTHORS.rst  DecisionTree.py  LICENSE.txt  README.rst  Translator.py  app.py  environment.yml  notes.ipynb  preprocessor.py  setup.cfg  setup.py  setup.sh  visualization.py
data/: ACN_20160331_20160414_FREE_STYLE.txt  APD_20160620_20160704_FREE_STYLE.txt  APD_20160706_20160721_FREE_STYLE.txt  CAA_20160907_20160922_FREE_STYLE.txt  COR_20160330_20160413_FREE_STYLE.txt  DPE_20160520_20160803_FREE_STYLE.txt  DSG_20160130_20160630_FREE_STYLE.txt  MPA_20160413_20160427_FREE_STYLE.txt  MPA_20160525_20160528_FREE_STYLE.txt  SBF_20160404_20160408_FREE_STYLE.txt  SSG_20160328_20160524_FREE_STYLE.txt  VGO_20160330_20160622_FREE_STYLE.txt
glycemic_patterns/: __init__.py  preprocessor.py  report.py  visualization.py
glycemic_patterns/model/: DecisionTree.py  Model.py  Pattern.py  Rule.py  Translator.py  __init__.py
glycemic_patterns/templates/: _report_info_en.html  _report_info_es.html  report.html
model/: DecisionTree.py  Model.py  Pattern.py  Rule.py  Translator.py
notebooks/: 1.divide_blocks_and_smoothing.ipynb  10.extracting_patterns_2.ipynb  11.generating_reports.ipynb  12.fixing_visualization.ipynb  13.fixing_MAGE.ipynb  14.model_evaluation_2.ipynb  15.plotting_decision_areas.ipynb  2.extending_dataset.ipynb  3.decision_trees.ipynb  4.previous_blocks_data.ipynb  5.extracting_patterns.ipynb  6.model_evaluation.ipynb  7.extending_dataset_2.ipynb  8.decision_trees_2.ipynb  9.MAGE_analysis.ipynb
notebooks/html/: 1.divide_blocks_and_smoothing.html  10.extracting_patterns_2.html  11.generating_reports.html  12.fixing_visualization.html  13.fixing_MAGE.html  14.model_evaluation_2.html  15.plotting_decision_areas.html  2.extending_dataset.html  3.decision_trees.html  4.previous_blocks_data.html  5.extracting_patterns.html  6.model_evaluation.html  7.extending_dataset_2.html  8.decision_trees_2 .html  8.decision_trees_2.html  9.MAGE_analysis.html
notebooks/patients/: ACN.ipynb  APD.ipynb  CAA.ipynb  COR.ipynb  DPE.ipynb  DSG.ipynb  MPA.ipynb  SBF.ipynb  SSG.ipynb  VGO.ipynb
report/: template.html
templates/: report.html
tests/: conftest.py  test_report.py
(+15 files in other folders)
